Bug 335561 - System tray plasmoids can't get their menu
Summary: System tray plasmoids can't get their menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR major
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-29 23:21 UTC by Aleix Pol
Modified: 2014-05-30 12:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2014-05-29 23:21:12 UTC
When the secondary button is clicked, it doesn't show the plasmoid menu. We get the system tray's instead.

Reproducible: Always

Steps to Reproduce:
1. Add the ktp-contactlist plasmoid to the system tray, or any other with its own menu.
2. Secondary click on it


Expected Results:  
We should get the plasmoid's menu there, not only if it's overriding it. I guess for battery too, for example.
Comment 1 Marco Martin 2014-05-30 12:11:06 UTC
Git commit d3d843ad8f27116564022c44f40fecdda4cd8812 by Marco Martin.
Committed on 30/05/2014 at 12:08.
Pushed by mart into branch 'master'.

add context menus to plasmoid icons

not 100% perfect but plasmoid, systray and containment actions are
accessible from right mouse button

M  +12   -6    applets/systemtray/package/contents/ui/PlasmoidItem.qml
M  +72   -0    applets/systemtray/plugin/protocols/plasmoid/plasmoidtask.cpp
M  +2    -0    applets/systemtray/plugin/protocols/plasmoid/plasmoidtask.h

http://commits.kde.org/plasma-workspace/d3d843ad8f27116564022c44f40fecdda4cd8812