add context menus to plasmoid icons

not 100% perfect but plasmoid, systray and containment actions are
accessible from right mouse button
BUG:335561